# rafpyutils

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: selfhosted-unit-testing.yml  unit-testing.yml
hooks/: pre-commit
rafpyutils/: __init__.py  list_utils.py
tests/: test_list_utils.py
